--- a/template/index.html
+++ b/template/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazing</title>
 </head>
@@ -13,7 +16,7 @@
     <div class="grid-container">
         <header class="row">
             <div>
-                <a class="brand" href="index.html">Amazing</a>
+                <a class="brand" href="index.html">Amazing Shop</a>
             </div>
             <div>
                 <a href="cart.html">Cart</a>
@@ -21,12 +24,194 @@
             </div>
         </header>
         <main>
-            <ul>
+            <!-- <ul>
                 <li>Product 1</li>
                 <li>Product 2</li>
                 <li>Product 3</li>
                 <li>Product 4</li>
-            </ul>
+            </ul> -->
+            <div class="row center">
+                <div class="card">
+                    <a href="product.html">
+                        <img class="medium" src="./images/product-1.png" alt="product">
+                    </a>
+                    <div class="card-body">
+                        <a href="product.html">
+                            <h2>Toy G</h2>
+                        </a>
+                        <div class="rating">
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="price">
+                        $ 120
+                    </div>
+
+                </div>
+                <div class="card">
+                    <a href="product.html">
+                        <img class="medium" src="./images/product-1.png" alt="product">
+                    </a>
+                    <div class="card-body">
+                        <a href="product.html">
+                            <h2>Toy G</h2>
+                        </a>
+                        <div class="rating">
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="price">
+                        $ 120
+                    </div>
+
+                </div>
+                <div class="card">
+                    <a href="product.html">
+                        <img class="medium" src="./images/product-1.png" alt="product">
+                    </a>
+                    <div class="card-body">
+                        <a href="product.html">
+                            <h2>Toy G</h2>
+                        </a>
+                        <div class="rating">
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="price">
+                        $ 120
+                    </div>
+
+                </div>
+                <div class="card">
+                    <a href="product.html">
+                        <img class="medium" src="./images/product-1.png" alt="product">
+                    </a>
+                    <div class="card-body">
+                        <a href="product.html">
+                            <h2>Toy G</h2>
+                        </a>
+                        <div class="rating">
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="price">
+                        $ 120
+                    </div>
+
+                </div>
+                <div class="card">
+                    <a href="product.html">
+                        <img class="medium" src="./images/product-1.png" alt="product">
+                    </a>
+                    <div class="card-body">
+                        <a href="product.html">
+                            <h2>Toy G</h2>
+                        </a>
+                        <div class="rating">
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="price">
+                        $ 120
+                    </div>
+
+                </div>
+                <div class="card">
+                    <a href="product.html">
+                        <img class="medium" src="./images/product-1.png" alt="product">
+                    </a>
+                    <div class="card-body">
+                        <a href="product.html">
+                            <h2>Toy G</h2>
+                        </a>
+                        <div class="rating">
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="price">
+                        $ 120
+                    </div>
+
+                </div>
+                <div class="card">
+                    <a href="product.html">
+                        <img class="medium" src="./images/product-1.png" alt="product">
+                    </a>
+                    <div class="card-body">
+                        <a href="product.html">
+                            <h2>Toy G</h2>
+                        </a>
+                        <div class="rating">
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star"></i>
+                            </span>
+                            <span><i class="fa fa-star-half"></i></span>
+                            <span><i class="fa fa-star-o"></i></span>
+                        </div>
+                    </div>
+                    <div class="price">
+                        $ 120
+                    </div>
+
+                </div>
+            </div>
         </main>
         <footer class="row center">
             All right reserved
