--- a/template/style.css
+++ b/template/style.css
@@ -7,6 +7,7 @@ html {
 body {
     margin: 0;
     height: 100vh;
+    /* 16px*1.6 */
     font-size: 1.6rem;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -45,6 +46,16 @@ footer {
     color: #ffd60a;
 }
 
+h1 {
+    font-size: 1.8rem;
+    padding: 1rem 0;
+}
+
+h2 {
+    font-size: 1.6rem;
+    padding: 1rem 0;
+}
+
 /* common */
 
 a {
@@ -69,4 +80,41 @@ header a {
 
 .row.center {
     justify-content: center;
+}
+
+/* image */
+
+img {
+    border-radius: 0.5rem;
+}
+
+img.medium {
+    max-width: 29rem;
+    width: 100%;
+}
+
+.card {
+    border: 0.1rem #c0c0c0 solid;
+    background-color: #f8f8f8;
+    border-radius: 0.5rem;
+    margin: 1rem;
+}
+
+.card-body {
+    padding: 1rem;
+}
+
+.card-body>* {
+    margin-bottom: 0.5rem;
+}
+
+.price {
+    font-size: 2rem;
+}
+
+/* rating */
+
+.rating span {
+    color: palevioletred;
+    margin: 0.1rem;
 }
