CRA Project Init

--- a/template/index.html
+++ b/template/index.html
@@ -24,16 +24,10 @@
             </div>
         </header>
         <main>
-            <!-- <ul>
-                <li>Product 1</li>
-                <li>Product 2</li>
-                <li>Product 3</li>
-                <li>Product 4</li>
-            </ul> -->
             <div class="row center">
                 <div class="card">
                     <a href="product.html">
-                        <img class="medium" src="./images/product-1.png" alt="product">
+                        <img class="medium" src="./images/product-1.png" alt="product"/>
                     </a>
                     <div class="card-body">
                         <a href="product.html">
@@ -59,7 +53,7 @@
                 </div>
                 <div class="card">
                     <a href="product.html">
-                        <img class="medium" src="./images/product-1.png" alt="product">
+                        <img class="medium" src="./images/product-1.png" alt="product"/>
                     </a>
                     <div class="card-body">
                         <a href="product.html">
@@ -85,7 +79,7 @@
                 </div>
                 <div class="card">
                     <a href="product.html">
-                        <img class="medium" src="./images/product-1.png" alt="product">
+                        <img class="medium" src="./images/product-1.png" alt="product"/>
                     </a>
                     <div class="card-body">
                         <a href="product.html">
@@ -111,7 +105,7 @@
                 </div>
                 <div class="card">
                     <a href="product.html">
-                        <img class="medium" src="./images/product-1.png" alt="product">
+                        <img class="medium" src="./images/product-1.png" alt="product"/>
                     </a>
                     <div class="card-body">
                         <a href="product.html">
@@ -137,7 +131,7 @@
                 </div>
                 <div class="card">
                     <a href="product.html">
-                        <img class="medium" src="./images/product-1.png" alt="product">
+                        <img class="medium" src="./images/product-1.png" alt="product"/>
                     </a>
                     <div class="card-body">
                         <a href="product.html">
@@ -163,7 +157,7 @@
                 </div>
                 <div class="card">
                     <a href="product.html">
-                        <img class="medium" src="./images/product-1.png" alt="product">
+                        <img class="medium" src="./images/product-1.png" alt="product"/>
                     </a>
                     <div class="card-body">
                         <a href="product.html">
@@ -189,7 +183,7 @@
                 </div>
                 <div class="card">
                     <a href="product.html">
-                        <img class="medium" src="./images/product-1.png" alt="product">
+                        <img class="medium" src="./images/product-1.png" alt="product"/>
                     </a>
                     <div class="card-body">
                         <a href="product.html">
