--- a/client/src/index.css
+++ b/client/src/index.css
@@ -73,6 +73,40 @@ a:hover {
   color: #ffc300;
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+li {
+  margin-top: 1rem;
+}
+
+button {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #20a020 solid;
+  font-size: 1.6rem;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #ffd60a;
+  cursor: pointer;
+}
+
+button:hover {
+  border: 0.1rem #4444;
+}
+
+button.primary {
+  background-color: #ffc300;
+}
+
+button.block {
+  background-color: grey;
+}
+
 header a {
   color: AED1E6;
 }
@@ -82,6 +116,18 @@ header a {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+}
+
+.row.top {
+  align-items: flex-start;
+}
+
+.col-1 {
+  flex: 1 1 25rem;
+}
+
+.col-2 {
+  flex: 2 1 50rem;
 }
 
 .row.center {
@@ -96,6 +142,10 @@ img {
 
 img.medium {
   max-width: 29rem;
+  width: 100%;
+}
+
+img.large {
   width: 100%;
 }
 
@@ -127,4 +177,14 @@ img.medium {
 
 .rating span:last-child {
   color: #000814;
+}
+
+/* Status */
+
+.success {
+  color: #20a020
+}
+
+.error {
+  color: red
 }
