--- a/client/src/index.css
+++ b/client/src/index.css
@@ -188,3 +188,16 @@ img.large {
 .error {
   color: red
 }
+.alert{
+  padding:1rem;
+  border: 0.1rem solid transparent;
+  border: 0.5rem;
+}
+.alert-info{
+  color: #202020;
+  background-color: #e0e0ff;
+}
+.alert-danger{
+  color: red;
+  background-color: rgba(216, 155, 155, 0.267);
+}
