--- a/client/src/index.css
+++ b/client/src/index.css
@@ -113,6 +113,14 @@ button.block {
 header a {
   color: AED1E6;
 }
+.badge{
+  background-color: red;
+  color: wheat;
+  border-radius: 50%;
+  padding: 0.2rem 0.7rem;
+  font-size:1.4rem;
+  margin-left: 0.2rem;
+}
 
 .row {
   display: flex;
