--- a/client/src/index.css
+++ b/client/src/index.css
@@ -113,12 +113,13 @@ button.block {
 header a {
   color: AED1E6;
 }
-.badge{
+
+.badge {
   background-color: red;
   color: wheat;
   border-radius: 50%;
   padding: 0.2rem 0.7rem;
-  font-size:1.4rem;
+  font-size: 1.4rem;
   margin-left: 0.2rem;
 }
 
@@ -141,6 +142,10 @@ header a {
   flex: 2 1 50rem;
 }
 
+.min-30 {
+  min-width: 30rem;
+}
+
 .row.center {
   justify-content: center;
 }
@@ -157,6 +162,11 @@ img.medium {
 }
 
 img.large {
+  width: 100%;
+}
+
+img.small {
+  max-width: 5rem;
   width: 100%;
 }
 
